# firebird

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/firebird/: __init__.py  firebird.py  firebird_conn.py
