[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "firebird"
version = "0.0.1"
authors = [
    {name="Sam Barjesteh", email="sam.barjesteh@hotmail.com"}
]
readme = "README.md"
dependencies = [
    "furl==2.1.3",
    "pandas==1.5.3",
    "SQLAlchemy==1.4.44",
    "sqlalchemy-firebird==0.7.6",
    "wincertstore==0.2"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]